<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tba_update"
        android:layout_width="434dp"
        android:layout_height="55dp"
        android:background="#004E63"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/tba_update"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/txt_date2"
        android:layout_width="69dp"
        android:layout_height="22dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="96dp"
        android:text="@string/txt_date2"
        android:textColor="#3F51B5"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_about2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tba_update"
        app:layout_constraintVertical_bias="0.28" />

    <TextView
        android:id="@+id/txt_about2"
        android:layout_width="71dp"
        android:layout_height="29dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="64dp"
        android:text="@string/txt_about2"
        android:textColor="#3F51B5"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_descript2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_descript2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="228dp"
        android:text="@string/txt_descript2"
        android:textColor="#3F51B5"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_update1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_update1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#004E63"
        android:text="@string/btn_update1"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="117dp"
        android:layout_height="18dp"
        android:layout_marginBottom="48dp"
        android:text="2021.08.13"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/txt_date2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="141dp"
        android:layout_height="29dp"
        android:layout_marginBottom="48dp"
        android:text="No 3 person"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toEndOf="@+id/txt_about2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="218dp"
        android:layout_height="160dp"
        android:layout_marginBottom="104dp"
        android:text=" She had side effect. Today number of 60 person vaccinate."
        app:layout_constraintBottom_toTopOf="@+id/btn_update1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toEndOf="@+id/txt_descript2" />

</androidx.constraintlayout.widget.ConstraintLayout>