<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tba_mynotes"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/tba_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/tba_mynotes"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/txt_Notenumber"
        android:layout_width="67dp"
        android:layout_height="29dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="124dp"
        android:text="Note no :"
        android:textColor="@color/txt_textcolor1"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tba_mynotes" />

    <TextView
        android:id="@+id/txt_Date"
        android:layout_width="61dp"
        android:layout_height="24dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="56dp"
        android:text="Date"
        android:textColor="#3F51B5"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Notenumber" />

    <TextView
        android:id="@+id/txt_About"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="60dp"
        android:text="About"
        android:textColor="#3F51B5"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Date" />

    <Button
        android:id="@+id/btn_newnote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="184dp"
        android:backgroundTint="#004E63"
        android:text="@string/btn_newnote"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_About"
        app:layout_constraintVertical_bias="0.086" />

    <Button
        android:id="@+id/btn_update1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#004E63"
        android:text="@string/btn_update"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.723"
        app:layout_constraintStart_toEndOf="@+id/btn_newnote"
        app:layout_constraintTop_toBottomOf="@+id/txt_About" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#004E63"
        android:text="@string/btn_delete"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent" />

    <SearchView
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002" />

    <EditText
        android:id="@+id/notenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="116dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/txt_Notenumber"
        app:layout_constraintTop_toBottomOf="@+id/tba_mynotes"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/txt_Date"
        app:layout_constraintTop_toBottomOf="@+id/notenumber"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/txt_About"
        app:layout_constraintTop_toBottomOf="@+id/date"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_view"
        android:layout_width="137dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#004E63"
        android:text="View"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/btn_delete"
        app:layout_constraintTop_toBottomOf="@+id/btn_update1" />

</androidx.constraintlayout.widget.ConstraintLayout>